mengupload sebagian unit testing untuk usercontroller
