# OpenAPI.yml
@@ -455,9 +455,12 @@ components:
     requestDataOrderUpdate:
       type: object
       required:
-      - detail
+      - email
+      - password
       properties:
-        detail:
+        email:
+          type: string
+        password:
           type: string
     responseLoginWithData:
       type: object
@@ -716,8 +719,10 @@ components:
               type: string
             PriceOrder:
               type: integer
-            DetailCredential:
+            Email:
               type: string
+            Password:
+              type: string  
         Message:
           type: string
     responseOrderWithDataArray:
@@ -740,7 +745,9 @@ components:
                 type: string
               PriceOrder:
                 type: integer
-              DetailCredential:
+              Email:
+                type: string
+              Password:
                 type: string
         Message:
           type: string
@@ -893,7 +900,8 @@ components:
           schema:  
             $ref: '#/components/schemas/requestDataOrderUpdate'
           example:
-            detail: "Email: subs.netflix@mail.com, Password: qwerty"
+            email: "netflix@gmail.com"
+            password: "netflix123"
         multipart/form-data:
           schema:
             $ref: '#/components/schemas/requestDataOrderUpdate'
@@ -1350,7 +1358,8 @@ components:
               GroupProductID: 1,
               NameProduct: Netflix,
               PriceOrder: 1254,
-              DetailCredential: "Email: , Password: "
+              Email: " ",
+              Password: " "
             }
             Message: Success Operation
     OrderResponseFailed:
@@ -1383,7 +1392,8 @@ components:
                 GroupProductID: 1,
                 NameProduct: Netflix,
                 PriceOrder: 1254,
-                DetailCredential: "Email: , Password: "
+                Email: " ",
+                Password: " "
               },
               {
                 OrderID: 2,
@@ -1391,7 +1401,8 @@ components:
                 GroupProductID: 1,
                 NameProduct: Netfllix,
                 PriceOrder: 1254,
-                DetailCredential: "Email: , Password: "
+                Email: " ",
+                Password: " "
               }          
             ]
             Message: Success Operation
@@ -1410,7 +1421,8 @@ components:
                 GroupProductID: 1,
                 NameProduct: Netflix,
                 PriceOrder: 1254,
-                DetailCredential: "Email: , Password: "
+                Email: " ",
+                Password: " "
               },
               {
                 OrderID: 3,
@@ -1418,7 +1430,8 @@ components:
                 GroupProductID: 2,
                 NameProduct: Spotify,
                 PriceOrder: 1500,
-                DetailCredential: "Email: , Password: "
+                Email: " ",
+                Password: " "
               }
             ]
             Message: Success Operation
@@ -1436,7 +1449,8 @@ components:
               GroupProductID: 1,
               NameProduct: Netflix,
               PriceOrder: 1254,
-              DetailCredential: "Email: subs.netflix@mail.com, Password: qwerty"
+              Email: "netflix@gmail.com",
+              Password: "netflix123"
             }
             Message: Success Operation
     UpdateOrderFailed:
